--- a/packages/vtable/examples/index.html
+++ b/packages/vtable/examples/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" style="width: 900.9px; height: 500.5px">
       <div class="sidebar" id="sidebar"></div>
       <div class="content">
         <div id="chartContainer">
