--- a/packages/vtable-plugins/demo/index.html
+++ b/packages/vtable-plugins/demo/index.html
@@ -15,8 +15,10 @@
     <div class="sidebar" id="sidebar">
     </div>
     <div class="content">
-      <div id="chartContainer">
-        <div id="vTable" style="height:100%; overflow: hidden;"></div>
+      <div id="chartContainer" style="position: relative;">
+        <!-- 创建一个新的div和vtable同级 定位在vtable的上面 -->
+        <div id="chartContainer2" style="position: relative; top: 0; left: 0; width: 100%; height: 30%; background-color: #f0f0f0;"></div>
+        <div id="vTable" style="height:70%; overflow: hidden; background-color: #f0f0f0; position: relative;"></div>
       </div>
       <div id="article">
       </div>
