--- a/packages/vtable-plugins/demo/index.html
+++ b/packages/vtable-plugins/demo/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/jpeg" href="https://lf1-cdn-tos.bytescm.com/obj/static/visactor-site/img/visactor/vtable-icon.svg">
+  <link rel="icon" type="image/jpeg"
+    href="https://lf1-cdn-tos.bytescm.com/obj/static/visactor-site/img/visactor/vtable-icon.svg">
   <link rel="stylesheet" href="./style.css">
   <title>VTable demos</title>
 </head>
@@ -17,7 +18,8 @@
     <div class="content">
       <div id="chartContainer" style="position: relative;">
         <!-- 创建一个新的div和vtable同级 定位在vtable的上面 -->
-        <div id="chartContainer2" style="position: relative; top: 0; left: 0; width: 100%; height: 30%; background-color: #f0f0f0;"></div>
+        <div id="chartContainer2"
+          style="position: relative; top: 0; left: 0; width: 100%; height: 10%; background-color: #f0f0f0;"></div>
         <div id="vTable" style="height:70%; overflow: hidden; background-color: #f0f0f0; position: relative;"></div>
       </div>
       <div id="article">
