docs: vtable sheet umd import

--- a/packages/vtable-plugins/demo/test-umd.html
+++ b/packages/vtable-plugins/demo/test-umd.html
@@ -28,8 +28,10 @@
 
 <!-- <script src="./main.ts" type="module"></script> -->
 <script src="https://unpkg.com/@visactor/vrender@1.0.18-alpha.0/dist/index.js"></script>
-<script src="../../vtable/dist/vtable.js"></script>
-<script src="../dist/vtable-plugins.js"></script>
-<script src="../../vtable-sheet/dist/vtable-sheet.js"></script>
+<script src="../../vtable/dist/vtable.min.js"></script>
+<!-- <script src="../dist/vtable-plugins.js"></script> -->
+<!-- <script src="../../vtable-sheet/dist/vtable-sheet.js"></script> -->
+<script src="https://unpkg.com/@visactor/vtable-plugins@1.20.2-alpha.0/dist/vtable-plugins.js"></script>
+<script src="https://unpkg.com/@visactor/vtable-sheet@1.20.2-alpha.0/dist/vtable-sheet.js"></script>
 <script src="test-umd.js"></script>
 </html>
